# agent-hub

./: .env.example  .gitignore  README.md  bunfig.toml  package.json  pyproject.toml  ruff.toml  turbo.json  ty.toml
.github/workflows/: ci.yml
apps/api/: Dockerfile  alembic.ini  openapi.json  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260303_0001_init.py  20260304_0002_stage2_rbac_sso.py
apps/api/src/app/: main.py
apps/api/src/app/api/: router.py
apps/api/src/app/api/v1/: __init__.py  admin.py  audit.py  auth.py  core.py  reports.py
apps/api/src/app/core/: __init__.py  config.py  database.py  security.py
apps/api/src/app/db/: models.py
apps/api/src/app/domain/: schemas.py
apps/api/src/app/services/: __init__.py  iam.py  outbox.py  sso.py
apps/api/src/app/tools/: export_openapi.py
apps/api/tests/: test_health.py  test_routes.py
apps/web/: Dockerfile  components.json  eslint.config.js  index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx
apps/web/src/components/layout/: app-layout.tsx  protected-route.tsx
apps/web/src/lib/: auth.tsx  permissions.ts  utils.ts
apps/web/src/pages/: admin-page.tsx  audit-page.tsx  business-page.tsx  dashboard-page.tsx  forbidden-page.tsx  login-page.tsx  reports-page.tsx
apps/web/src/styles/: globals.css
apps/web/tests/e2e/: smoke.spec.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/worker/: celery_app.py  config.py  main.py  tasks.py
apps/worker/tests/: test_config.py
docs/adr/: 0001-monorepo-architecture.md
infra/compose/: .env.example  docker-compose.yml
infra/compose/nginx/: nginx.conf
infra/observability/: prometheus.yml
libs/py-common/: pyproject.toml
libs/py-common/src/py_common/: __init__.py  logging.py  trace.py
libs/py-domain/: pyproject.toml
libs/py-domain/src/py_domain/: __init__.py  events.py  permissions.py
scripts/: export_openapi.sh
