[project]
name = "internal-worker"
version = "0.1.0"
description = "Background worker for audit and reporting"
requires-python = ">=3.14,<3.15"
dependencies = [
  "celery>=5.5.3",
  "py-common",
  "py-domain",
  "pydantic-settings>=2.11.0",
  "redis>=6.4.0",
  "sqlalchemy>=2.0.43",
  "psycopg[binary]>=3.2.10"
]

[tool.uv.sources]
py-common = { workspace = true }
py-domain = { workspace = true }

[project.scripts]
worker = "worker.main:run_worker"
worker-beat = "worker.main:run_beat"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/worker"]
