[project]
name = "py-domain"
version = "0.1.0"
description = "Shared domain models and constants"
requires-python = ">=3.14,<3.15"
dependencies = ["pydantic>=2.11.9"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/py_domain"]
